# vk_wrapper_cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.static  README.md  app.cpp  app.h  inc.h  main.cpp  prop.h  shader.frag  shader.vert  util.cpp  util.h
render/: camera.cpp
temp.git/: CMakeLists.txt  LICENSE  app.h  main.cpp  shader.frag  shader.vert
temp.git/render/: camera.h
temp.git/vk/: desc.cpp  pipe.cpp  render.cpp  vk_debug.cpp
vk/: buffer.cpp  desc.cpp  img.cpp  pipe.cpp  render.cpp  vertex.cpp
vk/core/: device.cpp  instance.cpp  surface.cpp
